[tool.poetry]
name = "python-touch"
version = "0.1.1"
description = ""
authors = ["takeshi0406 <sci.and.eng@gmail.com>"]
license = "MIT"
readme = 'README.md'

[tool.poetry.dependencies]
python = "^3.7"
click = "^7.1.2"

[tool.poetry.scripts]
pytouch = "python_touch.cli:main"

[tool.poetry.dev-dependencies]
pytest = "^6.0.1"
black = "^20.8b1"
flake8 = "^3.8.3"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
